--- a/pointsys-framework/pom.xml
+++ b/pointsys-framework/pom.xml
@@ -69,8 +69,8 @@
             <version>0.9.1</version>
         </dependency>
         <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
         </dependency>
         <dependency>
             <groupId>commons-fileupload</groupId>
